--- a/templates/index_.html
+++ b/templates/index_.html
@@ -6,27 +6,32 @@
 </head>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.0/socket.io.dev.js"></script>
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.0/socket.io.dev.js"></script>-->
+<!--<script src="https//cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.0/socket.io.min.js"></script>-->
+
 <body>
 	
-	<canvas id="testcanvas" height=300 width=250 style="border:1px solid #000000;"></canvas>
+	<canvas id="canvas" height=300 width=250 style="border:1px solid #000000;"></canvas>
 
-	<img id="faceimg" src="../static/img/3.jpg" height=200 width=180 alt="" style="border:1px solid #000000;">
+	<!--<img id="faceimg" src="" height=200 width=180 alt="" style="border:1px solid #000000;">-->
 	<br>
 
-	<input value="Добавить изображение" type="button" id="add_img">
-	<input type="file" id="my_file" hidden>
-	<br>
+	<input type="file" id="fileElem" multiple accept="image/*" style="display:none" onchange="load_img(this.files)">
 
-	<div id="customfileupload"></div>
-	<br>
+	<a href="#" id="fileSelect">Выберите фото</a> 
+
+	<div id="fileList">
+  		<p>No files selected!</p>
+	</div>
+
+
+	<br><br>
 
 	<input value="Отправить" type="button">
 
-	<script type="text/javascript" script src = "../static/js/function.js"></script>
+	<script type="text/javascript" script src = "../static/js/function_ (copy).js"></script>
 	<!--<script type="text/javascript" src="{{ url_for('static', filename='js/function.js') }}"></script>-->
 
 </body>
-
 
 </html>
