--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
 
 	<br>
 
-	<input value="Отправить" type="button">
+	<input value="Зарегистрироваться" type="button">
 
 	<script type="text/javascript" src="{{ url_for('static', filename='js/function.js') }}"></script>
 
