--- a/templates/index.html
+++ b/templates/index.html
@@ -22,11 +22,11 @@
 
 
 	<p>Введите логин: </p><input id = 'login' type="text">
-	<p>Введите пароль: </p><input id = 'password' type="text">
+	<p>Введите пароль: </p><input id = 'password' type="password">
 	<br><br>
 
 	<input id="sign_in" value="Зарегистрироваться" type="button">
-	<div id = "error"></div>
+	<div id = "message"></div>
 
 	<script type="text/javascript" src="{{ url_for('static', filename='js/function.js') }}"></script>
 
